# enceladus

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/enceladus/: __init__.py
src/enceladus/generation/: __init__.py  star.py
src/enceladus/model/: __init__.py  star.py
tests/: dummy_test.py  test_dummy.py  test_genertion_star.py
