[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "enceladus"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "deal>=4.24"
]

[[project.authors]]
name = "tom65536"
email = "peregrinus@planet.ms"

[project.urls]
Home = "https://github.com/tom65536/enceladus"

[tool.mypy]
warn_unused_configs = true
packages = "enceladus"

[tool.bandit]
#targets = ["src/enceladus"]
tests = ["B101", "B102", "B110", "B112"]

[tool.vulture]
paths = ["src/enceladus", "tests"]

[tool.pydoclint]
style = "numpy"

[tool.black]
skip-string-normalization = true
